# crawler

./: DESIGN.md  README.md  crawler.cabal  stack.yaml
app/: Main.hs
bench/: Bench.hs
src/: Lib.hs
test/: Spec.hs
