name:                crawler
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/Shou/crawler#readme
license:             BSD3
license-file:        LICENSE
author:              Benedict Aas
maintainer:          x@shou.io
copyright:           (C) 2016 Benedict Aas
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , blaze-html
                     , bytestring
                     , case-insensitive
                     , conduit
                     , conduit-combinators
                     , containers
                     , deepseq
                     , filepath
                     , errors
                     , html-conduit
                     , lens
                     , random
                     , stm
                     , stm-conduit
                     , tagged
                     , taggy
                     , taggy-lens
                     , text
                     , time
                     , type-operators
                     , vector
                     , wreq
                     , xml-lens
  default-language:    Haskell2010

executable crawler
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , crawler
                     , optparse-applicative
                     , safe
  default-language:    Haskell2010

test-suite crawler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , crawler
                     , tasty
                     , tasty-hunit
                     , attoparsec
                     , containers
                     , wreq
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark crawler-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Bench.hs
  build-depends:       base
                     , crawler
                     , criterion
                     , attoparsec
  ghc-options:         -threaded -rtsopts "-with-rtsopts=-N -K1K -h"
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Shou/crawler

